--- a/templates/transacao.html
+++ b/templates/transacao.html
@@ -208,8 +208,19 @@
                                 <option value="transporte">Transporte</option>
                             </optgroup>
                             <optgroup label="Receitas">
-                                <option value="salário">Salário</option>
-                                <option value="investimentos">Investimentos</option>
+                                <option value="salario">Salário</option>
+                                <option value="pro_labore">Pró-labore</option>
+                                <option value="comissao_bonus">Comissões/Bônus</option>
+                                <option value="freelance">Freelance</option>
+
+                                <option value="lucro_distribuido">Distribuição de Lucro empresarial</option>
+                                <option value="rendimento_aplicacao">Rendimento de Investimentos</option>
+                                <option value="dividendo">Dividendos</option>
+                                <option value="aluguel">Aluguel</option>
+                                <option value="royalties">Royalties</option>
+
+                                <option value="restituicao_reembolso">Restituição IR/Reembolso</option>
+                                <option value="cashback">Cashback</option>
                             </optgroup>
                             <option value="outros">Outros</option>
                         </select>
