--- a/templates/atualizacao.html
+++ b/templates/atualizacao.html
@@ -115,7 +115,7 @@
         </a>
 
         <header class="mb-5">
-            <h1 class="fw-bold">O que há de novo? <span class="fs-5 text-secondary fw-normal">{{ updates[0].versao_atualizacao }}</span></h1>
+            <h1 class="fw-bold">O que há de novo? <span class="fs-5 text-secondary fw-normal">v{{ updates[0].versao_atualizacao }}</span></h1>
             <p class="text-secondary">Acompanhe as últimas melhorias e novos recursos do seu gestor financeiro.</p>
         </header>
 
