--- a/templates/login.html
+++ b/templates/login.html
@@ -139,6 +139,9 @@
         </form>
 
         <div class="signup-link">
+            Esqueceu a senha? <a href="/esqueceu_senha">Atualize-a agora</a>
+        </div><br>
+        <div class="signup-link">
             Novo por aqui? <a href="/cadastro">Crie uma conta agora</a>
         </div>
     </div>
