--- a/templates/login.html
+++ b/templates/login.html
@@ -140,7 +140,7 @@
 
         <div class="signup-link">
             Esqueceu a senha? <a href="/esqueceu_senha">Atualize-a agora</a>
-        </div><br>
+        </div>
         <div class="signup-link">
             Novo por aqui? <a href="/cadastro">Crie uma conta agora</a>
         </div>
