--- a/templates/atualizar_senha.html
+++ b/templates/atualizar_senha.html
@@ -122,7 +122,7 @@
 
         <h4 class="text-center mb-4 fw-bold">Atualizar Senha</h4>
 
-        <form method="post" action="/atualizar_senha">
+        <form method="post" action="/post_nova_senha">
             <div class="mb-4">
                 <label for="senha" class="form-label">Nova Senha</label>
                 <input type="password" name="senha" id="senha" class="form-control" placeholder="Digite a nova senha" required>
