--- a/templates/validar_email.html
+++ b/templates/validar_email.html
@@ -150,7 +150,7 @@
                    autocomplete="one-time-code"
                    required>
 
-            <button type="submit" class="btn btn-orange">Confirmar Cadastro</button>
+            <button type="submit" class="btn btn-orange">Confirmar</button>
         </form>
 
         <div class="resend-text">
