--- a/templates/extrato.html
+++ b/templates/extrato.html
@@ -222,7 +222,7 @@
                         <td class="hide-mobile">
                             <span class="badge-cat">{{ transacao.categoria_transacao }}</span>
                         </td>
-                        <td class="hide-mobile small text-muted">
+                        <td class="hide-mobile small text-light">
                             {{ transacao.data_transacao }}
                         </td>
                         <td class="text-end {{ 'valor-receita' if transacao.valor_transacao > 0 else 'valor-despesa' }}">
