--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -186,7 +186,7 @@
                                     {% if usuario['licence'] %}
                                         <span class="text-success"><i class="bi bi-patch-check"></i> Ativa</span>
                                     {% else %}
-                                        <span class="text-muted">Inativa</span>
+                                        <span class="text-danger"><i class="bi bi-ban"></i> Inativa</span>
                                     {% endif %}
                                 </div>
                             </div>
