--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -153,7 +153,7 @@
                     </div>
                     <div class="col">
                         <h2 class="mb-1 fw-bold">{{ usuario['nome'] }}</h2>
-                        <p class="text-muted mb-0"><i class="bi bi-envelope me-2"></i>{{ usuario['email'] }}</p>
+                        <p class="text-light mb-0"><i class="bi bi-envelope me-2"></i>{{ usuario['email'] }}</p>
                     </div>
                     <div class="col-md-auto">
                         <span class="badge {{ 'bg-warning text-dark' if usuario['adm'] else 'bg-primary' }}">
