--- a/templates/admin.html
+++ b/templates/admin.html
@@ -102,21 +102,27 @@
             vertical-align: middle;
         }
 
-        /* Link do Usuário */
         .user-link {
-            position: relative;
             text-decoration: none;
             color: white;
             transition: color 0.3s ease;
+            display: flex;
+            flex-direction: column;
         }
 
-        .user-link::after {
+        .user-link .fw-bold {
+            position: relative;
+            display: inline-block;
+            width: fit-content;
+        }
+
+        .user-link .fw-bold::after {
             content: '';
             position: absolute;
             width: 100%;
             transform: scaleX(0);
             height: 2px;
-            bottom: -2px;
+            bottom: 0;
             left: 0;
             background-color: var(--primary-orange);
             transform-origin: bottom right;
@@ -127,7 +133,7 @@
             color: var(--primary-orange);
         }
 
-        .user-link:hover::after {
+        .user-link:hover .fw-bold::after {
             transform: scaleX(1);
             transform-origin: bottom left;
         }
@@ -153,14 +159,24 @@
 
         /* Responsividade */
         @media (max-width: 768px) {
-            .sidebar { width: 70px; }
-            .sidebar-header, .nav-link span { display: none; }
+            .sidebar {
+                width: 70px;
+            }
+
+            .sidebar-header, .nav-link span {
+                display: none;
+            }
+
             .main-content {
                 margin-left: 70px;
                 width: calc(100% - 70px);
                 padding: 1rem;
             }
-            .email-column { display: none; }
+
+            .email-column {
+                display: none;
+            }
+
             .mobile-email {
                 display: block !important;
                 color: var(--text-muted);
@@ -169,7 +185,9 @@
         }
 
         @media (min-width: 769px) {
-            .mobile-email { display: none !important; }
+            .mobile-email {
+                display: none !important;
+            }
         }
     </style>
 </head>
@@ -206,15 +224,15 @@
         <div class="table-responsive">
             <table class="table-custom">
                 <thead>
-                    <tr>
-                        <th>Usuário</th>
-                        <th class="email-column">E-mail</th>
-                        <th>Nível</th>
-                        <th class="text-end">Ação</th>
-                    </tr>
+                <tr>
+                    <th>Usuário</th>
+                    <th class="email-column">E-mail</th>
+                    <th>Nível</th>
+                    <th class="text-end">Ação</th>
+                </tr>
                 </thead>
                 <tbody>
-                    {% for u in usuarios %}
+                {% for u in usuarios %}
                     <tr>
                         <td>
                             <a href="/usuario/{{ u.email_user }}" class="user-link">
@@ -232,7 +250,8 @@
                         </td>
                         <td class="text-end">
                             {% if not u.is_admin %}
-                                <button onclick="confirmarPromocao({{ u.id_user }}, '{{ u.nome_user }}')" class="btn-adm">
+                                <button onclick="confirmarPromocao({{ u.id_user }}, '{{ u.nome_user }}')"
+                                        class="btn-adm">
                                     <i class="bi bi-arrow-up"></i>
                                 </button>
                             {% else %}
@@ -240,7 +259,7 @@
                             {% endif %}
                         </td>
                     </tr>
-                    {% endfor %}
+                {% endfor %}
                 </tbody>
             </table>
         </div>
