--- a/templates/admin.html
+++ b/templates/admin.html
@@ -283,7 +283,7 @@
                                     <i class="bi bi-arrow-up"></i>
                                 </button>
                             {% else %}
-                                <span class="text-light" style="font-size: 0.7rem;">Sem ações</span>
+                                <span class="text-light" style="font-size: 0.7rem;">N/A</span>
                             {% endif %}
                         </td>
                     </tr>
