--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -171,7 +171,7 @@
                 <div class="col">
                     <h2 class="mb-1 fw-bold">{{ usuario['nome'] }}</h2>
                     <p class="text-light mb-0"><i class="bi bi-envelope me-2"></i>{{ usuario['email'] }}</p>
-                    <small class="text-light">ID: #{{ usuario['id'] }}</small>
+                    <strong><small class="text-light">ID: #{{ usuario['id'] }}</small></strong>
                 </div>
                 <div class="col-md-auto">
                     {% if usuario['adm'] %}
